Fix mobile menu z-index and platform nav item links.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -77,6 +77,7 @@ h6 {
 
 /*Navbar styles */
 .navbar {
+	z-index: 9999999;
 	padding-bottom: 0px;
 	flex-direction: column;
 	align-items: center;
@@ -180,6 +181,9 @@ h6 {
 	margin-top: 20px;
 	margin-bottom: 10px;
 }
+.dropdown_menu_left h1, .dropdown_menu_left h2, .dropdown_menu_left h3 a {
+	text-decoration: none;
+}
 .dropdown_menu_right {
 	width: 50%;
 	background-color: lightgrey;
@@ -200,6 +204,9 @@ h6 {
 .dropdown > .navbar__link:after {
 	content: unset;
 }
+.sectionItemsMobile {
+	margin-left: .5rem;
+}
 
 /* Footer Styles */
 .footer {
@@ -215,4 +222,9 @@ h6 {
 }
 .footer__link-item {
 	color: var(--ifm-color-primary);
+}
+
+/* Utility Styles */
+.font-bold {
+	font-weight: bold;
 }
